0.05j: Separate Newscontroller
* Add unit tests for RegistrationPane and RegistrationController